--- a/Code_10/theme-solution/html/style_guide.html
+++ b/Code_10/theme-solution/html/style_guide.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SLOF Basic Style Guide</title>
+    <title>Basic Style Guide</title>
     <link
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -1073,7 +1073,7 @@
             홈페이지에서 예약 결제한 상품을 취소할 경우, 홈페이지에서 직접
             취소해야 신속한 처리가 가능합니다.
           </p>
-          <a href="#" class="btn btn-sm btn-ghost">slowalk 바로가기</a>
+          <a href="#" class="btn btn-sm btn-ghost">바로가기</a>
         </div>
         <!-- //template -->
       </div>
@@ -1085,7 +1085,7 @@
             홈페이지에서 예약 결제한 상품을 취소할 경우, 홈페이지에서 직접
             취소해야 신속한 처리가 가능합니다.
           </p>
-          <a href="#" class="btn btn-gray">slowalk 바로가기</a>
+          <a href="#" class="btn btn-gray">바로가기</a>
         </div>
         <!-- //template -->
       </div>
@@ -1475,7 +1475,7 @@
         <!-- template -->
         <ul class="list-tile row">
           <li class="tile-item col-sm-6">
-            <span class="stit">Slowalk와 함께하는</span>
+            <span class="stit"> 함께하는</span>
             <h3 class="h3">
               H3: 황금비에 대해 <br />
               궁금하면 Grid Calculator?
@@ -1500,7 +1500,7 @@
         </ul>
         <ul class="list-tile row">
           <li class="tile-item col-sm-6">
-            <span class="stit">Slowalk와 함께하는</span>
+            <span class="stit"> 함께하는</span>
             <h3 class="h3">
               H3: 황금비에 대해 <br />
               궁금하면 Grid Calculator?
